<resources>
    <string name="app_name">JsBookStoreApp</string>

    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <string name="action_delete_all_entries">Delete All Books</string>

    <string name="bookadd_activity_title_new_book">Add a Book</string>

    <string name="bookadd_activity_title_edit_book">Edit Book</string>

    <string name="bookadd_update_book_successful">Book updated</string>

    <string name="bookadd_update_book_failed">Error updating book</string>

    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <string name="discard">Discard</string>

    <string name="keep_editing">Keep Editing</string>

    <string name="bookadd_delete_book_successful">Book deleted</string>

    <string name="bookadd_delete_book_failed">Error with deleting book</string>

    <string name="delete_dialog_msg">Delete this book?</string>

    <string name="delete">Delete</string>

    <string name="cancel">Cancel</string>

    <string name="action_save">Save</string>

    <string name="action_delete">Delete</string>

    <string name="bookadd_insert_book_successful">Book inserted</string>

    <string name="bookadd_insert_book_failed">Error inserting book</string>

    <string name="empty_view_title_text">No books...</string>

    <string name="empty_view_subtitle_text">Get started by adding one!</string>


    <string name="product_name">Product Name</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="supplier_phone_number">Supplier Phone Number</string>

</resources>
