<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/HeadingStyle"
            android:text="@string/product_name" />


        <EditText
            android:id="@+id/edit_name"
            style="@style/EditorTextStyle"
            android:inputType="textCapWords" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/HeadingStyle"
            android:text="@string/price" />


        <EditText
            android:id="@+id/edit_price"
            style="@style/EditorTextStyle"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/HeadingStyle"
            android:text="@string/quantity" />


        <EditText
            android:id="@+id/edit_quantity"
            style="@style/EditorTextStyle"
            android:inputType="number" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+" />

            <Button
                android:id="@+id/minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/HeadingStyle"
            android:text="@string/supplier_name" />


        <EditText
            android:id="@+id/edit_supplier_name"
            style="@style/EditorTextStyle"
            android:inputType="textCapWords" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/HeadingStyle"
            android:text="@string/supplier_phone_number" />


        <EditText
            android:id="@+id/edit_supplier_phone"
            style="@style/EditorTextStyle"
            android:inputType="number" />

        <Button
            android:id="@+id/phonebutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="phone" />

    </LinearLayout>


</LinearLayout>